tests/errors/compiler/not_rowofint_in_stanfunc/float_argument.c
int main() 
{	
	draw_number(1.1);
	//hjk //нужно раскоментить чтобы код дальнейший читался корректно
	return 0;
}